@@ -1,7 +1,10 @@
-#include "GroupNode.h"
+/* wxWidgets must be included first in Windows due to conflicts with Boost's
+ * handling of windows.h. */
 #include <wx/statbox.h>
 #include <wx/sizer.h>
 #include <wx/gbsizer.h>
+
+#include "GroupNode.h"
 #include "lambda.h"
 #include "gui_thread.h"
 
