@@ -1,5 +1,8 @@
+/* wxWidgets must be included first in Windows due to conflicts with Boost's
+ * handling of windows.h. */
+#include <wx/panel.h>
+
 #include "WindowNode.h"
-#include <wx/wx.h>
 #include "lambda.h"
 #include "gui_thread.h"
 
